Use GuicedEE for javax.inject
javax.inject is an ancient artifact, which use the version published
by GuicedEE, as it is a proper bundle as well as a JPMS module.

Change-Id: Ifc6fa52925cad2b10e3fb2e7ff2146f6da39a0ba
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/applications/arbitratorreconciliation/impl/pom.xml
+++ b/applications/arbitratorreconciliation/impl/pom.xml
@@ -22,7 +22,7 @@
             <artifactId>upgrade</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.inject</groupId>
+            <groupId>com.guicedee.services</groupId>
             <artifactId>javax.inject</artifactId>
             <optional>true</optional>
         </dependency>
