--- a/applications/device-ownership-service/pom.xml
+++ b/applications/device-ownership-service/pom.xml
@@ -18,7 +18,7 @@
             <artifactId>mdsal-eos-binding-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.inject</groupId>
+            <groupId>com.guicedee.services</groupId>
             <artifactId>javax.inject</artifactId>
             <optional>true</optional>
         </dependency>
