--- a/applications/forwardingrules-manager/pom.xml
+++ b/applications/forwardingrules-manager/pom.xml
@@ -14,7 +14,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>javax.inject</groupId>
+      <groupId>com.guicedee.services</groupId>
       <artifactId>javax.inject</artifactId>
       <optional>true</optional>
     </dependency>
