--- a/applications/of-switch-config-pusher/pom.xml
+++ b/applications/of-switch-config-pusher/pom.xml
@@ -43,7 +43,7 @@
             <artifactId>infrautils-util</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.inject</groupId>
+            <groupId>com.guicedee.services</groupId>
             <artifactId>javax.inject</artifactId>
             <optional>true</optional>
         </dependency>
