--- a/applications/reconciliation-framework/pom.xml
+++ b/applications/reconciliation-framework/pom.xml
@@ -47,7 +47,7 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>javax.inject</groupId>
+            <groupId>com.guicedee.services</groupId>
             <artifactId>javax.inject</artifactId>
             <optional>true</optional>
         </dependency>
