--- a/applications/southbound-cli/pom.xml
+++ b/applications/southbound-cli/pom.xml
@@ -51,7 +51,7 @@
             <artifactId>forwardingrules-manager</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.inject</groupId>
+            <groupId>com.guicedee.services</groupId>
             <artifactId>javax.inject</artifactId>
             <optional>true</optional>
         </dependency>
