--- a/applications/topology-lldp-discovery/pom.xml
+++ b/applications/topology-lldp-discovery/pom.xml
@@ -59,7 +59,7 @@
       <artifactId>model-topology</artifactId>
     </dependency>
     <dependency>
-      <groupId>javax.inject</groupId>
+      <groupId>com.guicedee.services</groupId>
       <artifactId>javax.inject</artifactId>
       <optional>true</optional>
     </dependency>
