--- a/applications/arbitratorreconciliation/impl/pom.xml
+++ b/applications/arbitratorreconciliation/impl/pom.xml
@@ -14,8 +14,16 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.opendaylight.openflowplugin</groupId>
+            <artifactId>openflowplugin-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.opendaylight.openflowplugin.applications</groupId>
             <artifactId>arbitratorreconciliation-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.openflowplugin.applications</groupId>
+            <artifactId>reconciliation-framework</artifactId>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.serviceutils</groupId>
