--- a/applications/bulk-o-matic/pom.xml
+++ b/applications/bulk-o-matic/pom.xml
@@ -14,10 +14,6 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.opendaylight.openflowplugin</groupId>
-      <artifactId>openflowplugin-api</artifactId>
-    </dependency>
-    <dependency>
       <groupId>org.opendaylight.mdsal</groupId>
       <artifactId>mdsal-binding-api</artifactId>
     </dependency>
@@ -28,6 +24,10 @@
     <dependency>
       <groupId>org.opendaylight.openflowplugin.model</groupId>
       <artifactId>model-flow-base</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.openflowplugin.model</groupId>
+      <artifactId>model-flow-service</artifactId>
     </dependency>
     <dependency>
       <groupId>org.opendaylight.infrautils</groupId>
