--- a/applications/notification-supplier/pom.xml
+++ b/applications/notification-supplier/pom.xml
@@ -30,6 +30,10 @@
             <artifactId>model-flow-base</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.opendaylight.openflowplugin.model</groupId>
+            <artifactId>model-flow-statistics</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.opendaylight.openflowplugin</groupId>
             <artifactId>openflowplugin-common</artifactId>
         </dependency>
