--- a/INFO.yaml
+++ b/INFO.yaml
@@ -44,6 +44,11 @@ committers:
       company: 'PANTHEON.tech'
       id: 'rovarga'
       timezone: 'Europe/Bratislava'
+    - name: 'Sangwook Ha'
+      email: 'sangwook.ha@verizon.com'
+      company: 'Verizon'
+      id: 'sangwookha'
+      timezone: 'Unknown/Unknown'
 tsc:
     # yamllint disable rule:line-length
     approval: 'NA'
