--- a/INFO.yaml
+++ b/INFO.yaml
@@ -4,11 +4,11 @@ project_creation_date: '2013-07-18'
 project_category: ''
 lifecycle_state: 'Incubation'
 project_lead: &odl_openflowplugin_ptl
-    name: 'Arunprakash D'
-    email: 'd.arunprakash@ericsson.com'
-    company: 'Ericsson'
-    id: 'Arunprakash'
-    timezone: 'Unknown/Unknown'
+    name: 'Sangwook Ha'
+    email: 'sangwook.ha@verizon.com'
+    company: 'Verizon'
+    id: 'sangwookha'
+    timezone: 'Americas/Los_Angeles'
 primary_contact: *odl_openflowplugin_ptl
 issue_tracking:
     type: 'jira'
@@ -41,9 +41,9 @@ committers:
       timezone: 'Unknown/Unknown'
     - name: 'Robert Varga'
       email: 'nite@hq.sk'
-      company: 'hq'
+      company: 'PANTHEON.tech'
       id: 'rovarga'
-      timezone: 'Unknown/Unknown'
+      timezone: 'Europe/Bratislava'
 tsc:
     # yamllint disable rule:line-length
     approval: 'NA'
