--- a/INFO.yaml
+++ b/INFO.yaml
@@ -4,11 +4,11 @@ project_creation_date: '2013-07-18'
 project_category: ''
 lifecycle_state: 'Incubation'
 project_lead: &odl_openflowplugin_ptl
-    name: 'Arunprakash D'
-    email: 'd.arunprakash@ericsson.com'
-    company: 'Ericsson'
-    id: 'Arunprakash'
-    timezone: 'Unknown/Unknown'
+    name: 'Sangwook Ha'
+    email: 'sangwook.ha@verizon.com'
+    company: 'Verizon'
+    id: 'sangwookha'
+    timezone: 'Americas/Los_Angeles'
 primary_contact: *odl_openflowplugin_ptl
 issue_tracking:
     type: 'jira'
@@ -44,11 +44,6 @@ committers:
       company: 'PANTHEON.tech'
       id: 'rovarga'
       timezone: 'Europe/Bratislava'
-    - name: 'Sangwook Ha'
-      email: 'sangwook.ha@verizon.com'
-      company: 'Verizon'
-      id: 'sangwookha'
-      timezone: 'Americas/Los_Angeles'
 tsc:
     # yamllint disable rule:line-length
     approval: 'NA'
