Replace slf4j-log4j12
Log4j12 is not developed any more and slf4j-simple should be used
instead of slf4j-log4j12 for routing test outputs.

Also remove unnecessary stubbings detected in some test classes.

JIRA: OPNFLWPLUG-1124
Change-Id: I7b17dfae58125523a3f3c570dd02d0323a3066ab
Signed-off-by: Sangwook Ha <sangwook.ha@verizon.com>

--- a/openflowjava/openflow-protocol-impl/pom.xml
+++ b/openflowjava/openflow-protocol-impl/pom.xml
@@ -84,9 +84,8 @@
         </dependency>
 
         <dependency>
-            <!-- FIXME: configure slf4j-simple instead -->
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
+            <artifactId>slf4j-simple</artifactId>
             <scope>test</scope>
         </dependency>
 
