--- a/openflowplugin-it/pom.xml
+++ b/openflowplugin-it/pom.xml
@@ -157,7 +157,7 @@
 
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>log4j-over-slf4j</artifactId>
+            <artifactId>slf4j-simple</artifactId>
             <scope>test</scope>
         </dependency>
 
