--- a/extension/openflowplugin-extension-nicira/pom.xml
+++ b/extension/openflowplugin-extension-nicira/pom.xml
@@ -50,7 +50,7 @@
         <!-- Test dependencies -->
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
+            <artifactId>slf4j-simple</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
