Migrate test-provider to CompositeListener
Do not use generated Listener interface and prefer a CompositeListeners,
which allow more flexible dispatch.

Change-Id: I7848c91eb80900ed1bdde70f2f75c13325a41680
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
Signed-off-by: Sangwook Ha <sangwook.ha@verizon.com>

--- a/test-provider/pom.xml
+++ b/test-provider/pom.xml
@@ -23,6 +23,10 @@
             <artifactId>mdsal-binding-api</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.opendaylight.mdsal</groupId>
+            <artifactId>yang-binding</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.opendaylight.openflowplugin.model</groupId>
             <artifactId>model-flow-service</artifactId>
         </dependency>
