Eliminate blueprint for openflowplugins-impl karaf commands
Command artifacts were refactored and extracted into new
maven module openflowplugin-shell which is required bc
karaf-services-maven-plugin overrides manifest file
including commands only. Future artifact updated to include
new module, keeping prior assembly.

JIRA: OPNFLWPLUG-1127
Change-Id: Ie9092226457c40f6d0fcd22c39657875b70e8975
Signed-off-by: Ruslan Kashapov <ruslan.kashapov@pantheon.tech>

--- a/artifacts/pom.xml
+++ b/artifacts/pom.xml
@@ -43,6 +43,11 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
+                <artifactId>openflowplugin-shell</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>openflowplugin-blueprint-config</artifactId>
                 <version>${project.version}</version>
             </dependency>
