--- a/openflowplugin-impl/pom.xml
+++ b/openflowplugin-impl/pom.xml
@@ -73,11 +73,6 @@
             <artifactId>openflow-protocol-spi</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.karaf.shell</groupId>
-            <artifactId>org.apache.karaf.shell.console</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
@@ -129,6 +124,13 @@
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
+                 <configuration>
+                     <instructions>
+                         <!-- impl packages are manifested as private by default,
+                         export openflowplugin-shell required packages to avoid dependency resolution error -->
+                         <Export-Package>org.opendaylight.openflowplugin.impl;org.opendaylight.openflowplugin.impl.statistics.ofpspecific</Export-Package>
+                     </instructions>
+                </configuration>
             </plugin>
         </plugins>
     </build>
