Clean up dependencies a bit
openflowjava artifacts have a warnigs about used undeclared
dependencies, fix that up a bit.

Change-Id: Ib07fcd06b58a286cc5fe180cfb29c5f358908280
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
(cherry picked from commit 597a7932a33b9c8d9e56dd7126d910b9c73b2515)

--- a/openflowjava/openflow-protocol-api/pom.xml
+++ b/openflowjava/openflow-protocol-api/pom.xml
@@ -21,12 +21,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.opendaylight.mdsal</groupId>
-            <artifactId>yang-binding</artifactId>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-buffer</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>yang-common</artifactId>
+            <groupId>org.opendaylight.mdsal</groupId>
+            <artifactId>yang-binding</artifactId>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.mdsal.binding.model.ietf</groupId>
@@ -41,8 +41,12 @@
             <artifactId>yang-ext</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-buffer</artifactId>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>concepts</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>yang-common</artifactId>
         </dependency>
     </dependencies>
 </project>
