WIP: Wire OpenFlowPluginProviderImpl via OSGi DS
JIRA: XXX
Change-Id: I5329c3209342f52caf7b4403f5c0bcff65c9f669
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/openflowplugin-impl/pom.xml
+++ b/openflowplugin-impl/pom.xml
@@ -129,6 +129,22 @@
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
+
+                <!-- FIXME: remove this block when we do not have Blueprint components -->
+                <configuration>
+                    <instructions>
+                        <Provide-Capability>
+                            osgi.service;objectClass:List&lt;String&gt;="org.opendaylight.openflowplugin.api.openflow.FlowGroupCacheManager";uses:="org.opendaylight.openflowplugin.api.openflow",
+                            osgi.service;objectClass:List&lt;String&gt;="org.opendaylight.openflowplugin.api.openflow.FlowGroupInfoHistories,org.opendaylight.openflowplugin.extension.api.OpenFlowPluginExtensionRegistratorProvider";uses:="org.opendaylight.openflowplugin.api.openflow,org.opendaylight.openflowplugin.extension.api",
+                            osgi.service;objectClass:List&lt;String&gt;="org.opendaylight.openflowplugin.api.openflow.configuration.ConfigurationServiceFactory";uses:="org.opendaylight.openflowplugin.api.openflow.configuration",
+                            osgi.service;objectClass:List&lt;String&gt;="org.opendaylight.openflowplugin.api.openflow.mastership.MastershipChangeServiceManager";uses:="org.opendaylight.openflowplugin.api.openflow.mastership",
+                            osgi.service;objectClass:List&lt;String&gt;="org.opendaylight.openflowplugin.api.openflow.statistics.ofpspecific.MessageIntelligenceAgency";uses:="org.opendaylight.openflowplugin.api.openflow.statistics.ofpspecific",
+                            osgi.service;objectClass:List&lt;String&gt;="org.opendaylight.openflowplugin.impl.DiagStatusProvider";uses:="org.opendaylight.openflowplugin.impl",
+
+                            osgi.service;objectClass:List&lt;String&gt;="org.opendaylight.openflowplugin.api.openflow.configuration.ConfigurationService";uses:="org.opendaylight.openflowplugin.api.openflow.configuration"
+                        </Provide-Capability>
+                    </instructions>
+                </configuration>
             </plugin>
         </plugins>
     </build>
