Use configuration from XML files
Rather than deploying fixed configuration, parse it from XML files, as
documented.

JIRA: OPNFLWPLUG-1133
Change-Id: Ib3e9df26639e33be6414c7458d9664a5eb823237
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
(cherry picked from commit e20cdfd2f5a64fd5083ac6d1521386409a332e33)

--- a/openflowjava/openflowjava-blueprint-config/pom.xml
+++ b/openflowjava/openflowjava-blueprint-config/pom.xml
@@ -42,8 +42,8 @@
             <artifactId>mdsal-common-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.opendaylight.openflowplugin.openflowjava</groupId>
-            <artifactId>openflow-protocol-api</artifactId>
+            <groupId>org.opendaylight.mdsal</groupId>
+            <artifactId>mdsal-dom-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.openflowplugin.openflowjava</groupId>
@@ -63,7 +63,31 @@
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>util</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>yang-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>yang-data-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>yang-data-codec-xml</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>yang-data-impl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>yang-model-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>yang-model-util</artifactId>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
