Move OFP configuration files
We are packaging the deployer artifact in odl-openflowplugin-southbound,
hence we should package configuration files there as well.

This fixes the dependencies of odl-openflowjava-protocol so as not to
reference MD-SAL's APIs.

JIRA: OPNFLWPLUG-1133
Change-Id: I8e26134c3d584e3c9962ce2885d14edb8e505c01
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/features-aggregator/odl-openflowplugin-southbound/pom.xml
+++ b/features-aggregator/odl-openflowplugin-southbound/pom.xml
@@ -128,6 +128,18 @@
             <type>cfg</type>
             <classifier>config</classifier>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}.openflowjava</groupId>
+            <artifactId>openflowjava-blueprint-config</artifactId>
+            <type>xml</type>
+            <classifier>config</classifier>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}.openflowjava</groupId>
+            <artifactId>openflowjava-blueprint-config</artifactId>
+            <type>xml</type>
+            <classifier>legacyConfig</classifier>
+        </dependency>
     </dependencies>
 
 </project>
