Modify access rules

--- a/project.config
+++ b/project.config
@@ -5,6 +5,8 @@
 [access "refs/*"]
 	owner = group saml/odl-gerrit-openflowplugin-committers
 	read = group GitHub Replication
+	push = group Release Engineering Team
+	pushMerge = group Release Engineering Team
 [allowSuperproject "docs"]
 	matching = refs/heads/stable/nitrogen:refs/heads/stable/nitrogen
 [allowSuperproject "releng/autorelease"]
