--- a/project.config
+++ b/project.config
@@ -7,6 +7,7 @@
 	read = group GitHub Replication
 	push = group Release Engineering Team
 	pushMerge = group Release Engineering Team
+	forgeCommitter = group Release Engineering Team
 [allowSuperproject "docs"]
 	matching = refs/heads/stable/nitrogen:refs/heads/stable/nitrogen
 [allowSuperproject "releng/autorelease"]
