WIP: Plug SRM into build
We have the SRM landed, this patch plugs it into our build and
eliminates the dependency on serviceutils.

This needs to pick up a few serviceutils classes, which are included
here from their d25834a5a76c52a4f860e3b356cc97881eb4d998 versions, cut
down to minimize footprint.

JIRA: OPNFLWPLUG-1134
Change-Id: Ie7f75ceaad2ac07ec6f265c92d08749121e26429
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/applications/forwardingrules-manager/pom.xml
+++ b/applications/forwardingrules-manager/pom.xml
@@ -33,7 +33,7 @@
       <artifactId>mdsal-binding-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.opendaylight.serviceutils</groupId>
+      <groupId>org.opendaylight.openflowplugin</groupId>
       <artifactId>srm-api</artifactId>
     </dependency>
     <dependency>
